# gitlsf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: counter.rs  error.rs  filter.rs  git.rs  lib.rs  main.rs
tests/: integration_test.rs
