[package]
name = "gitls"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A fast Git repository line counter"
license = "MIT"
repository = "https://github.com/yourusername/gitls"
keywords = ["git", "line-count", "cli", "statistics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
