[package]
name = "gitlsf"
version = "0.1.0"
edition = "2024"
authors = ["SOV710 <chris916911179@outlook.com>"]
description = "A fast Git repository line counter"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/SOV710/gitlsf"
homepage = "https://github.com/SOV710/gitlsf"
documentation = "https://github.com/SOV710/gitlsf"
readme = "README.md"
keywords = ["cli", "git", "line-count", "statistics"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
memchr = "2"
memmap2 = "0.9"
rayon = "1.10"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
